--- a/main/templates/homepage.html
+++ b/main/templates/homepage.html
@@ -11,5 +11,7 @@
         {{ form }}
         <button type="submit">Compile and Run</button>
     </form>
+
+    <p>{{output}}</p>
 </body>
 </html>
